Fixing flicker on program item slidedown.

--- a/css/style.less
+++ b/css/style.less
@@ -228,7 +228,7 @@ h2 {
   font-size: 18px;
   font-weight: 600;
   line-height: 24px;
-  margin-bottom: 0; 
+  margin-bottom: 12px; 
   width: 460 / 540% * 100;
 }
 
